# backend/src/routes/cart-routes.ts
@@ -1,8 +1,10 @@
 import { Router } from 'express';
-import { getMyCart } from '../controllers/cart-controller';
+import { addCartItem, getMyCart, removeCartItem } from '../controllers/cart-controller';
 
 const router = Router();
 
 router.get('/me', getMyCart);
+router.post('/items', addCartItem);
+router.delete('/items/:productId', removeCartItem);
 
 export default router;
