# backend/src/services/products/products-service.types.ts
@@ -1,3 +1,7 @@
 import type { Product } from '../../types/entities';
 
+export interface ListProductsInput {
+  categoryId: number;
+}
+
 export type ListProductsResult = Product[];
